<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:layout_marginStart="8dp"
        android:hint="@string/uid">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/identifier_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:layout_marginStart="8dp"
        android:hint="@string/prompt_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/identifier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:layout_marginStart="8dp"
        android:hint="@string/name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/identifier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/identifier_form_delete_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/Delete"
        app:backgroundTint="@color/warn"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_baseline_delete_24"/>
</LinearLayout>