<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/note_form_lin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:layout_marginStart="8dp"
                android:hint="@string/author">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:layout_marginHorizontal="8dp"
                android:hint="@string/text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/note_date_time_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/note_form_lin_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/note_date_time"
                    android:focusable="false"
                    android:paddingTop="24dp"
                    android:paddingBottom="10dp"
                    android:paddingHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                    android:hint="@string/date_amp_time"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/note_date_time_clear_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/clear"
                android:layout_marginHorizontal="8dp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/note_form_delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:contentDescription="@string/Delete"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconPadding="10dp"
            app:iconGravity="textStart"
            app:backgroundTint="@color/warn"
            app:layout_constraintTop_toBottomOf="@id/note_date_time_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>