<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/linear_two"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="8dp"
                android:text="@string/status"
                android:textColor="?android:textColorPrimary"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="8dp"
                android:text="@string/intent"
                android:textColor="?android:textColorPrimary"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="8dp"
                android:text="@string/medication"
                android:textColor="?android:textColorPrimary"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="8dp"
                android:text="@string/subject"
                android:textColor="?android:textColorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linear_one"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/med_req_status_text"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="8dp"
                android:text="@string/placeholder"
                android:textColor="?android:textColorPrimary"/>

            <TextView
                android:id="@+id/med_req_intent_text"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="8dp"
                android:text="@string/placeholder"
                android:textColor="?android:textColorPrimary"/>

            <TextView
                android:id="@+id/med_req_medication_text"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="8dp"
                android:text="@string/placeholder"
                android:textColor="?android:textColorPrimary"/>

            <TextView
                android:id="@+id/med_req_subject_text"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="8dp"
                android:text="@string/placeholder"
                android:textColor="?android:textColorPrimary"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/liner_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linear_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/warn"
                android:id="@+id/med_req_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Delete"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:drawableTint="@color/warn"
                android:drawableEnd="@drawable/ic_baseline_delete_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>